<resources>
    <string name="app_name">Dog House</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My Dogs</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string-array name="dogs_type_en">
        <item>affenpinscher</item>
        <item>african</item>
        <item>airedale</item>
        <item>akita</item>
        <item>appenzeller</item>
        <item>australian</item>
        <item>shepherd</item>
        <item>basenji</item>
        <item>beagle</item>
        <item>bluetick</item>
        <item>borzoi</item>
        <item>bouvier</item>
        <item>boxer</item>
        <item>brabancon</item>
        <item>briard</item>
        <item>buhund</item>
        <item>norwegian</item>
        <item>bulldog</item>
        <item>wolfhound</item>
        <item>boston</item>
        <item>english</item>
        <item>french</item>
        <item>bullterrier</item>
        <item>staffordshire</item>
        <item>cairn</item>
        <item>cattledog</item>
        <item>australian</item>
        <item>chihuahua</item>
        <item>chow</item>
        <item>clumber</item>
        <item>cockapoo</item>
        <item>collie</item>
        <item>border</item>
        <item>coonhound</item>
        <item>corgi</item>
        <item>cardigan</item>
        <item>cotondetulear</item>
        <item>dachshund</item>
        <item>dalmatian</item>
        <item>dane</item>
        <item>great</item>
        <item>deerhound</item>
        <item>scottish</item>
        <item>dingo</item>
        <item>doberman</item>
        <item>elkhound</item>
        <item>norwegian</item>
        <item>entlebucher</item>
        <item>eskimo</item>
        <item>bichon frise</item>
        <item>germanshepherd</item>
        <item>greyhound</item>
        <item>italian</item>
        <item>groenendael</item>
        <item>havanese</item>
        <item>hound</item>
        <item>afghan</item>
        <item>basset</item>
        <item>ibizan</item>
        <item>plott</item>
        <item>walker</item>
        <item>husky</item>
        <item>keeshond</item>
        <item>kelpie</item>
        <item>komondor</item>
        <item>kuvasz</item>
        <item>labrador</item>
        <item>leonberg</item>
        <item>lhasa</item>
        <item>malamute</item>
        <item>malinois</item>
        <item>maltese</item>
        <item>mastiff</item>
        <item>tibetan</item>
        <item>mexicanhairless</item>
        <item>mix</item>
        <item>mountain</item>
        <item>bernese</item>
        <item>swiss</item>
        <item>newfoundland</item>
        <item>otterhound</item>
        <item>papillon</item>
        <item>pekinese</item>
        <item>pembroke</item>
        <item>pinscher</item>
        <item>miniature</item>
        <item>pitbull</item>
        <item>german</item>
        <item>germanlonghair pointer</item>
        <item>pomeranian</item>
        <item>poodle</item>
        <item>pug</item>
        <item>puggle</item>
        <item>pyrenees</item>
        <item>redbone</item>
        <item>chesapeake</item>
        <item>curly</item>
        <item>flatcoated</item>
        <item>golden</item>
        <item>ridgeback</item>
        <item>rottweiler</item>
        <item>saluki</item>
        <item>samoyed</item>
        <item>schipperke</item>
        <item>schnauzer</item>
        <item>gordon setter</item>
        <item>irish</item>
        <item>sheepdog shetland</item>
        <item>shiba</item>
        <item>shihtzu</item>
        <item>cocker spaniel</item>
        <item>english springer spaniel</item>
        <item>stbernard</item>
        <item>silky wheaten terrier</item>
        <item>yorkshire</item>
        <item>bedlington</item>
        <item>border</item>
        <item>dandie</item>
        <item>fox</item>
        <item>kerryblue</item>
        <item>lakeland</item>
        <item>norfolk</item>
        <item>norwich</item>
        <item>patterdale</item>
        <item>russell</item>
        <item>scottish</item>
        <item>sealyham</item>
        <item>vizsla</item>
        <item>waterdog</item>
        <item>spanish</item>
        <item>weimaraner</item>
        <item>whippet</item>
        <item>irish wolfhound</item>
    </string-array>
    <string-array name="dogs_type_he">
        <item>אפנפינצ\'ר</item>
        <item>אפריקני</item>
        <item>איירדייל טרייר</item>
        <item>אקיטה</item>
        <item>אפנצלר</item>
        <item>אוסטרלי</item>
        <item>רועה</item>
        <item>בסנג\'י</item>
        <item>ביגל</item>
        <item>בלוטיק קונהאונד</item>
        <item>בורזוי</item>
        <item>בוביה דה פלאנדר</item>
        <item>בוקסר</item>
        <item>גריפון</item>
        <item>בריארד</item>
        <item>גרייהונד</item>
        <item>נורבגי</item>
        <item>בולדוג</item>
        <item>וולפהאונד</item>
        <item>בוסטון טרייר</item>
        <item>אנגלי</item>
        <item>צרפתי</item>
        <item>בול טרייר</item>
        <item>סטאפורדשייר</item>
        <item>קאירן טרייר</item>
        <item>כלב בקר אוסטרלי</item>
        <item>אוסטרלי</item>
        <item>צ\'יוואווה</item>
        <item>צ\'או צ\'או</item>
        <item>קלמבר ספניאל</item>
        <item>קוקופו</item>
        <item>קולי</item>
        <item>בורדר טרייר</item>
        <item>קונהאונד</item>
        <item>קורגי</item>
        <item>קרדיגן</item>
        <item>קוטון דה טוליאר</item>
        <item>תחש</item>
        <item>דלמטי</item>
        <item>דני</item>
        <item>ענק</item>
        <item>דירהאונד</item>
        <item>סקוטי</item>
        <item>דינגו</item>
        <item>דוברמן</item>
        <item>אלקהאונד</item>
        <item>נורבגי</item>
        <item>אנטלבוכר</item>
        <item>אסקימו</item>
        <item>בישון פריזה</item>
        <item>רועה גרמני</item>
        <item>גרייהאונד</item>
        <item>איטלקי</item>
        <item>גרוננדל</item>
        <item>הוואנז</item>
        <item>האונד</item>
        <item>אפגני</item>
        <item>באסט</item>
        <item>איביזן</item>
        <item>פלוט</item>
        <item>ווקר</item>
        <item>האסקי סיבירי</item>
        <item>קיישונד</item>
        <item>קלפי אוסטרלי</item>
        <item>קומונדור</item>
        <item>קובאש</item>
        <item>לברדור</item>
        <item>לאונברגר</item>
        <item>אפסו להסה</item>
        <item>כלב אסקימוסי</item>
        <item>כלב מלינוג</item>
        <item>מלטזי</item>
        <item>מסטיף</item>
        <item>טיבטי</item>
        <item>כלב מקסיקני חסר שיער</item>
        <item>מעורב</item>
        <item>כלב הרים</item>
        <item>ברנר זננהונד</item>
        <item>שוויצרי</item>
        <item>ניופאונדלנד</item>
        <item>אוטרהאונד</item>
        <item>פפיון</item>
        <item>פקינז</item>
        <item>פמברוק</item>
        <item>פינצ\'ר</item>
        <item>מיניאטורי</item>
        <item>פיטבול</item>
        <item>גרמני</item>
        <item> פוינטר גרמני</item>
        <item>פומרניאן</item>
        <item>פודל</item>
        <item>פאג</item>
        <item>פאגל</item>
        <item>כלב הרים פירנאי</item>
        <item>רדבון</item>
        <item>צ\'ספיק ביי רטריבר</item>
        <item>מתולתל</item>
        <item>רטריבר חלק-שיער</item>
        <item>גולדן רטריבר</item>
        <item>רידג\'בק רודזי</item>
        <item>רוטוויילר</item>
        <item>סלוקי</item>
        <item>סמויד</item>
        <item>סכיפרקה</item>
        <item>שנאוצר</item>
        <item>גורדון סטר</item>
        <item>אירי</item>
        <item>כלב רועים שלטי</item>
        <item>שיבה אינו</item>
        <item>שי טסו</item>
        <item>קוקר ספניאל</item>
        <item>ספרינגר ספניאל אנגלי</item>
        <item>סן ברנרד</item>
        <item>טרייר חיטה רך-פרווה</item>
        <item>יורקשייר</item>
        <item>בדלינגטון</item>
        <item>בורדר קולי</item>
        <item>דנדי דינמונט</item>
        <item>שועל</item>
        <item>טרייר קרי כחול</item>
        <item>לייקלנד</item>
        <item>נורפוק</item>
        <item>נוריץ\'</item>
        <item>פטרדייל</item>
        <item>ג\'ק ראסל</item>
        <item>סקוטי</item>
        <item>סיליהם</item>
        <item>ויסלה</item>
        <item>כלב מים</item>
        <item>ספרדי</item>
        <item>ויימרנר</item>
        <item>ויפט</item>
        <item>וולפהאונד אירי</item>
    </string-array>
    <string name="upload_progress">Upload in progress</string>
    <string name="select_race">Select race:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="please_wait">Please wait...</string>
    <string name="fill_details">Please fill all the details</string>
    <string name="woof">Woof Woof!</string>
    <string name="dog_upload_finish">You have finished uploading your dog!</string>
    <string name="dismiss">Dismiss</string>
    <string name="empty_message">Cannot send empty message</string>
    <string name="new_message">New Message</string>
    <string name="typing">typing...</string>
    <string name="offline">Offline</string>
    <string name="last_seen">Last seen at:</string>
    <string name="message_deleted">This message was deleted...</string>
    <string name="delete_message">Delete Message!</string>
    <string name="delete_message_text">You want to delete this message?</string>
    <string name="approve">APPROVE</string>
    <string name="decline">DECLINE</string>
    <string name="seen">Seen</string>
    <string name="delivered">Delivered</string>
    <string name="gender">Gender</string>
    <string name="type">Type</string>
    <string name="age">Age</string>
    <string name="my_dog">MY DOG</string>
    <string name="km">KM</string>
    <string name="changes_saved">Your changes has been saved!</string>
    <string name="save_dog">Saving your dog</string>
    <string name="error_occured">An Error Occurred</string>
    <string name="unable_location">unable to get last location</string>
    <string name="updating_profile">Updating your profile</string>
    <string name="fill_field">Fill in the field</string>
    <string name="username_used">Username already used</string>
    <string name="empty_field">Empty field</string>
    <string name="invalid_phone_length">Invalid phone length</string>
    <string name="phone_used">Phone already used</string>
    <string name="invalid_phone_prefix">Invalid phone prefix</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="email_used">Email already used</string>
    <string name="weak_password">Password must contain at least 6 characters</string>
    <string name="logging_in">Logging you in</string>
    <string name="searching_dogs">Searching for dogs nearby</string>
    <string name="chat_action">Chat Action!</string>
    <string name="contact_owner">Contact the owner of</string>
    <string name="dog_removal">Dog Removal!</string>
    <string name="delete_dog">You are about to delete</string>
    <string name="ui_age">Age</string>
    <string name="ui_male">Male</string>
    <string name="ui_save">save</string>
    <string name="ui_enter_full_name">Enter Full Name</string>
    <string name="ui_permission_request">Permission Request</string>
    <string name="ui_permission_text">Dog House needs permission to access device location to provide required services. Please allow the permission</string>
    <string name="ui_grant_permission">Grant Permission</string>
    <string name="ui_next">Next</string>
    <string name="ui_dog_description">Tell us about ur dog...</string>
    <string name="ui_service_dog">Service dog</string>
    <string name="ui_vaccinated">Vaccinated</string>
    <string name="ui_mouth_guard">Mouth Guard</string>
    <string name="ui_neutered_sterile">Neutered/Sterile</string>
    <string name="ui_friendly">Friendly</string>
    <string name="ui_healthy">Healthy</string>
    <string name="ui_aggressive">Aggressive</string>
    <string name="ui_trained">Trained</string>
</resources>