<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.roeico7.dogadopt.MyDogs.addDog.AddDogInfo">

    <CheckBox
        android:id="@+id/option1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_title" />


    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ui_service_dog"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/option1"
        app:layout_constraintEnd_toStartOf="@+id/option5"
        app:layout_constraintStart_toEndOf="@+id/option1"
        app:layout_constraintTop_toTopOf="@+id/option1" />


    <CheckBox
        android:id="@+id/option2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/option1"
        app:layout_constraintStart_toStartOf="@+id/option1"
        app:layout_constraintTop_toBottomOf="@+id/option1" />


    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ui_vaccinated"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/option2"
        app:layout_constraintEnd_toStartOf="@+id/option7"
        app:layout_constraintStart_toEndOf="@+id/option2"
        app:layout_constraintTop_toTopOf="@+id/option2" />


    <CheckBox
        android:id="@+id/option3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/option2"
        app:layout_constraintStart_toStartOf="@+id/option2"
        app:layout_constraintTop_toBottomOf="@+id/option2" />


    <TextView
        android:id="@+id/text3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ui_mouth_guard"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/option3"
        app:layout_constraintEnd_toStartOf="@+id/option8"
        app:layout_constraintStart_toEndOf="@+id/option3"
        app:layout_constraintTop_toTopOf="@+id/option3" />


    <CheckBox
        android:id="@+id/option4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/option3"
        app:layout_constraintStart_toStartOf="@+id/option3"
        app:layout_constraintTop_toBottomOf="@+id/option3" />


    <TextView
        android:id="@+id/text4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ui_neutered_sterile"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/option4"
        app:layout_constraintEnd_toStartOf="@+id/option8"
        app:layout_constraintStart_toEndOf="@+id/option4"
        app:layout_constraintTop_toTopOf="@+id/option4" />


    <CheckBox
        android:id="@+id/option5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/iv_title" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ui_friendly"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/option5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/option5"
        app:layout_constraintTop_toTopOf="@+id/option5" />


    <CheckBox
        android:id="@+id/option6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/option5"
        app:layout_constraintStart_toStartOf="@+id/option5"
        app:layout_constraintTop_toBottomOf="@+id/option5" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ui_healthy"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/option6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/option6"
        app:layout_constraintTop_toTopOf="@+id/option6" />


    <CheckBox
        android:id="@+id/option7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/option6"
        app:layout_constraintStart_toStartOf="@+id/option6"
        app:layout_constraintTop_toBottomOf="@+id/option6" />


    <TextView
        android:id="@+id/text7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ui_aggressive"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/option7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/option7"
        app:layout_constraintTop_toTopOf="@+id/option7" />


    <CheckBox
        android:id="@+id/option8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/option7"
        app:layout_constraintStart_toStartOf="@+id/option7"
        app:layout_constraintTop_toBottomOf="@+id/option7" />


    <TextView
        android:id="@+id/text8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ui_trained"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/option8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/option8"
        app:layout_constraintTop_toTopOf="@+id/option8" />


    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/additional_information"
        app:layout_constraintBottom_toTopOf="@+id/guideline27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.57" />


    <RelativeLayout
        android:id="@+id/description_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_dog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description">

        <TextView
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_border"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="4"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/burlyWood"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ui_dog_description"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option4" />


    <com.roeico7.dogadopt.logic.FButton
        android:id="@+id/btn_add_dog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ui_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline29"
        fbutton:buttonColor="@color/fbutton_color_carrot" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>